Configure maven